--- a/_data/2021/rutgers/participants.yml
+++ b/_data/2021/rutgers/participants.yml
@@ -49,7 +49,7 @@
 - name: V. Tibet Gur
   image: /assets/images/VTibet_Gur
   bio: "Tibet Gur is a doctoral student at Rutgers Political Science department. He holds a BA and MA degree from International Relations department of Bilkent University, Turkey. His research interests include international political economy, energy regionalism, and maritime border conflict. His prior work has been published on Turkish Studies."
-  website: https://twitter.com/tibetgur
+  website: https://twitter.com/tibetgur.jpeg
   
 - name: Jessica Hamilton
   image: /assets/images/Jessica_Hamilton.jpeg
@@ -80,7 +80,7 @@
   website: https://twitter.com/IsaacKimmel
   
 - name: India Lenear
-  image: /assets/images/India_Lenear
+  image: /assets/images/India_Lenear.jpeg
   bio: "India S. Lenear is currently a doctoral student at Rutgers University at New Brunswick. Her work broadly studies Women and politics, American politics, and American Political Theory. More specifically, she focuses on Black politics, identity politics, and Black feminism(s). Her research examines Black women’s political behavior, engagement, and participation through Black feminist theoretical lenses. She holds a BA in Political Science from North Carolina Central University."
   
 - name: YiJyun Lin
@@ -103,7 +103,7 @@
   website: https://twitter.com/mmercadodiaz
   
 - name: Zhaomeng Niu
-  image: /assets/images/Zhaomeng_Niu.png
+  image: /assets/images/Ahaomeng_Niu.png
   bio: "Zhaomeng Niu is a postdoctoral fellow in Behavioral Sciences at Rutgers Cancer Insititute of New Jersey. She received her PhD from Washington State University. Her research interests include social media interventions, human-computer interaction, and health communication."
   
 - name: Francisco Olivos
@@ -145,7 +145,7 @@
   website:  https://twitter.com/Ericjstokan
 
 - name: Michael Strawbridge
-  image: /assets/images/Michael_Strawbridge
+  image: /assets/images/Michael_Strawbridge.jpeg
   bio: "Michael is a PhD student in political science at Rutgers University who earned his B.A. from Beloit College. His primary field is American politics, with interests in Black political behavior and public opinion, political communication, and political psychology. Michael is interested in survey methodology, text analysis, and experiments."
   website: https://twitter.com/MjStrawbridge
   
