--- a/_data/2021/rutgers/participants.yml
+++ b/_data/2021/rutgers/participants.yml
@@ -115,6 +115,10 @@
   image: /assets/images/Salomey_Osei.jpeg
   bio: "Salomey holds a Master of Philosophy in Applied Mathematics from the Kwame Nkrumah University of Science and Technology. She is the Research lead of unsupervised methods for Ghana NLP and a co organizer for the Women in Machine Learning and Data Science (WiMLDS) Accra chapter. She is also passionate about mentoring students, especially females in STEM and her long term goal is to share her knowledge with others by lecturing."
   website: https://twitter.com/NanaYaaSally
+  
+- name: Emirhan Özkan
+  image: /assets/images/Emirhan_Ozkan.png
+  bio: "Emirhan Özkan is a doctoral student in political science at Rutgers University. His research interests lie in the intersection of international relations and comparative politics. Emirhan is particularly interested in the foreign policy, public opinion, foreign meddling with a methodological interest in experimental methods. His current research examines the public opinion towards foreign electoral interventions."
 
 - name: Nick Paulson
   image: /assets/images/Nick_Paulson.jpeg
