--- a/_data/2021/rutgers/participants.yml
+++ b/_data/2021/rutgers/participants.yml
@@ -47,9 +47,9 @@
   bio: "Stacey Greene is an assistant professor of political science at Rutgers University. She studies intergroup politics among and between racial/ethnic minorities in the United States."
 
 - name: V. Tibet Gur
-  image: /assets/images/VTibet_Gur
+  image: /assets/images/VTibet_Gur.jpeg
   bio: "Tibet Gur is a doctoral student at Rutgers Political Science department. He holds a BA and MA degree from International Relations department of Bilkent University, Turkey. His research interests include international political economy, energy regionalism, and maritime border conflict. His prior work has been published on Turkish Studies."
-  website: https://twitter.com/tibetgur.jpeg
+  website: https://twitter.com/tibetgur
   
 - name: Jessica Hamilton
   image: /assets/images/Jessica_Hamilton.jpeg
