--- a/_data/2021/beijing/people.yml
+++ b/_data/2021/beijing/people.yml
@@ -89,7 +89,7 @@ participants:
 
   - name: Ruijia Cheng
     image: /assets/images/Ruijia-Cheng
-    bio: "Ruijia "Regina" Cheng is a PhD student in the Human Centered Design & Engineering department at University of Washington. Her research focuses on studying collaborative learning activities in a variety of online communities. Recently she is particularly interested in understanding and designing for novices' engagement with data in online communities."
+    bio: "Ruijia (Regina) Cheng is a PhD student in the Human Centered Design & Engineering department at University of Washington. Her research focuses on studying collaborative learning activities in a variety of online communities. Recently she is particularly interested in understanding and designing for novices' engagement with data in online communities."
     website: "https://reginachangzhou.github.io/"
 
   - name: Zhaowen Guo
