--- a/_data/2021/beijing/people.yml
+++ b/_data/2021/beijing/people.yml
@@ -83,7 +83,7 @@ participants:
     website: "https://twitter.com/ChenXiduo"
 
   - name: Zhuo Chen
-    image: /assets/images/Zhuo-Chen
+    image: /assets/images/Zhuo-Chen.jpeg
     bio: "Zhuo Chen is a Ph.D. candidate in the Department of Communications and New Media at the National University of Singapore. His work examines the sociopolitical consequences of communication technologies. His research interests include collective action, public opinion, civic engagement, and social organizing and networking in the digital era."
     website: "https://scholar.google.com.sg/citations?user=FeClXboAAAAJ"
 
@@ -122,7 +122,7 @@ participants:
     website: "https://anmolpanda.github.io/"
 
   - name: Huilian Sophie Qiu
-    image: /assets/images/Huilian Sophie-Qiu
+    image: /assets/images/Huilian-Sophie-Qiu
     bio: "Sophie Qiu is a Ph.D. student of School of Computer Science, Carnegie Mellon University. Her primary research interest is diversity and inclusion in open-source software. This includes using social network theories to study sustained participation and using NLP techniques to detect negative interactions. Her work on social capital in the open-source community won the Distinguished Paper Award at the 41st International Conference on Software Engineering."
     website: "https://www.sophiehsqq.com"
 
@@ -152,7 +152,7 @@ participants:
     website: "https://twitter.com/indeed_xinyi"
 
   - name: Y. Jasmine Wu
-    image: /assets/images/Y. Jasmine-Wu
+    image: /assets/images/Y.-Jasmine-Wu
     bio: "Y. Jasmine Wu is a doctoral student in the Media, Technology, and Society program at Northwestern University. Her current research applies computational methods to understand team diversity as well as network dynamics around teams in both academic and industrial settings."
 
   - name: Shiyang Xiao
