--- a/_data/2021/beijing/people.yml
+++ b/_data/2021/beijing/people.yml
@@ -83,7 +83,7 @@ participants:
     website: "https://twitter.com/ChenXiduo"
 
   - name: Zhuo Chen
-    image: /assets/images/Zhuo-Chen.jpeg
+    image: /assets/images/Zhuo-Chen.jpg
     bio: "Zhuo Chen is a Ph.D. candidate in the Department of Communications and New Media at the National University of Singapore. His work examines the sociopolitical consequences of communication technologies. His research interests include collective action, public opinion, civic engagement, and social organizing and networking in the digital era."
     website: "https://scholar.google.com.sg/citations?user=FeClXboAAAAJ"
 
