--- a/_data/2021/hse/participants.yml
+++ b/_data/2021/hse/participants.yml
@@ -1,1 +1,74 @@
-- name:
+- name: Iuliia Alieva
+  image: /assets/images/Alieva.jpeg
+  bio: "Iuliia is a doctoral candidate and a research associate at the University of Missouri School of Journalism. She is a multilingual media professional and a researcher with experience in international media communication and data science. Her research focuses on media effects and political communication. Iuliia is about to start her role as a post-doctoral associate at Carnegie Mellon University."
+  website: https://twitter.com/Iuliia_Alieva 
+
+- name: Ali Behrouz
+  image: /assets/images/Behrouz.jpeg
+  bio: "Ali Behrouz is a master's student in the Computer Science department at the University of British Columbia. He has a Bachelor's degree in Computer Engineering from the Sharif University of Technology. He has previously worked on the relationship between green space and happiness in developed countries as well as a project in modelling complex networks. His primary research interests are network analysis, machine learning, and computational social science."
+  website: https://scholar.google.com/citations?user=UbwVuqIAAAAJ&hl=en#
+
+- name: Jesse Bryant
+  image: /assets/images/Bryant.jpeg
+  bio: "Jesse Callahan Bryant is a Doctoral Student in Sociology at the Yale School of the Environment. He is interested in using computational and mixed methods approaches directed toward the study of environmental policymaking, extremism, and myth-making. Before beginning his Ph.D. at Yale, Jesse received a professional Master's degree in Environmental Management from the Yale School of Forestry and before that was an educator and mountain guide throughout the American West."
+  website: https://twitter.com/jcallahanbryant
+
+- name: Irina Busurkina
+  image: /assets/images/Busurkina.jpeg
+  bio: "Irina Busurkina is currently pursuing a PhD in sociology at the National Research University Higher School of Economics, Saint Petersburg. She holds both a MA in Sociology from Higher School of Economics University and a MA in Cultural Studies from Saint Petersburg University. Her past research projects were related to the studies of customers’ opinion dynamics and polarizing in Russian media regarding migrants using techniques from natural language processing. Her doctoral thesis focuses on online platforms as institutions for the production of valuation practices."
+  website: 
+  
+- name: Linna Fu
+  image: /assets/images/LinnaFu.png
+  bio: "Linna Fu is a master student at the Higher School of Economics. She earned one M.Sc. in the Applied Psychology from the Chinese University of Hong Kong (Shenzhen) in 2020. Now her research focuses on the comparative social research about gender inequality and Asian cultural values."
+  website: 
+
+- name: Farnoosh Hashemi
+  image: /assets/images/Hashemi.jpeg
+  bio: "Farnoosh Hashemi is a graduate student in the Computer Science department at the University of British Columbia. She holds a Bachelor's degree in Computer Engineering from the Sharif University of Technology. Her research interests include computational social science, social networks, and machine learning. She also previously studied the impact of green space on happiness in developed countries and work on projects in influence maximization and modelling complex networks."
+  website: 
+
+- name: Mengzhen Jia
+  image: /assets/images/Jia.jpeg
+  bio: "Mengzhen Jia is a master student majoring in sociology in Sun Yat-sen University. Her research interests are centered around field experiments and human-robot interaction (HRI). Currently, she is exploring the emotion mode of social interaction utilizing text mining and video analysis methods. Mengzhen has a background in psychology. She also uses agent-based modeling to better understand the micro-level underpinning of macro-level social interaction patterns such as social conflict and social protest."
+  website: https://twitter.com/JiaMandy2021
+
+- name: Nora Kirkizh
+  image: /assets/images/Kirkizh.jpeg
+  bio: "Nora Kirkizh is a doctoral researcher at GESIS, Department of Computational Social Science and a PhD student at TU Munich, Chair of Computational Social Science and Big Data. Her interests include political behavior, experiments and computational methods. Nora uses digital trace data to study peoples' political attitudes, polarization, and media diets."
+  website: norakirkizh.github.io
+
+- name: Timur Naushirvanov
+  image: /assets/images/Naushirvanov.png
+  bio: "Timur Naushirvanov is a first-year Master of Public Administration student at Central European University in Vienna. His research interests are related to international development and impact evaluation, education, populism, big data, and quantitative research methods. He holds a BA in Political Science from the HSE University, Moscow."
+  website: 
+
+- name: Timur Osmanov
+  image: /assets/images/Osmanov.jpeg
+  bio: "Timur Osmanov is a lecturer at the Higher School of Economics and the Moscow School of Economics and Economics. He is developing a methodology for sociological research in the Public Opinion Foundation (Moscow). His research interests include methodology for constructing samples for surveys, telephone survey methodology, combining survey data with big data."
+  website: https://www.linkedin.com/in/timur-osmanov/
+
+- name: Vasiliy Pisarevskiy
+  image: /assets/images/Pisarevskiy.jpeg
+  bio: "I have been working as a research associate at Saint Tichon Orthodox University since 2007. My major research fields are: Orthodox online communities in social networks (I defended my dissertation on this topic in 2016) and social practices of Orthodox parishes in Russia and abroad (8 countries)."
+  website: 
+
+- name: Yuri Rykov
+  image: /assets/images/Rykov.jpeg
+  bio: "I am a research fellow at the Centre for Population Health Sciences, Nanyang Technological University (Singapore). I have background in quantitative social science, digital health, and internet studies. I am interested in digital phenotyping research using behavioral and physiological data from wearable sensors for detection of cardiometabolic and mental disorders."
+  website: https://scholar.google.com/citations?user=hOxcaCcAAAAJ&hl=en
+  
+- name: Angelika Tsivinskaya
+  image: /assets/images/Tsivinskaya.jpeg
+  bio: "Angelika Tsivinskaya is a junior researcher in Center for Institutional Analysis of Science & Education, European University at Saint Petersburg (Russia). Her research interest lies at areas such as statistical analysis, science of science and CSS with focus on Higher education institutions."
+  website: https://scholar.google.com/citations?user=UbwVuqIAAAAJ&hl=en#
+
+- name: Olga Vilkova
+  image: /assets/images/Vilkova.jpeg
+  bio: "Olga Vilkova is currently pursuing a PhD in Economic Sociology at Higher School of Economics, Russia. Her research interests lie in the field of inequality and professional success on online labor markets. Her studies are based on mixed approach where conventional sociological methods are balanced with computational techniques (web-scraping)."
+  website: Linkedin.com/pub/olga-vilkova/98/602/329
+
+- name: Nan Zhang
+  image: /assets/images/NanZhang.jpeg
+  bio: "Nan Zhang is a Senior Research Fellow at the Max Planck Institute for Research on Collective Goods. He is primarily interested in the study of group relations, language and identity, social norms, and civic behavior. Major applications of his research include immigration, ethnic diversity, and state- and nation-building.  Nan holds a Ph.D. in Political Science from Stanford University, a J.D. from Stanford Law School, and a double B.A. in Economics and Political Science from the University of California, Berkeley."
+  website: https://nanzhangresearch.github.io/
