--- a/_data/2021/rutgers/participants.yml
+++ b/_data/2021/rutgers/participants.yml
@@ -153,6 +153,11 @@
   bio: "Michael is a PhD student in political science at Rutgers University who earned his B.A. from Beloit College. His primary field is American politics, with interests in Black political behavior and public opinion, political communication, and political psychology. Michael is interested in survey methodology, text analysis, and experiments."
   website: https://twitter.com/MjStrawbridge
   
+- name: Frances Wang
+  image: /assets/images/Frances_Wang.jpeg
+  bio: "Frances Yaping Wang is an Assistant Professor of Political Science at the Singapore Management University. She received my Ph.D. from the University of Virginia. She studies public opinion on foreign policy issues in authoritarian states and state propaganda. Her research draws on archival work, survey experiments, and computerized content analysis."
+  website: https://www.yapingwang.com/
+  
 - name: Ryan Wang
   image: /assets/images/Ryan_Wang.jpeg
   bio: "Ryan Wang is a Ph. D. student majoring in Mass Communications and minoring in Social Data Analytics at Penn State. His broad research interests aim at investigating the development of ICTs and the backbone Internet infrastructure, and their interlocked impacts on political polarization and economic development within a spatial structure."
