--- a/_data/2021/hse/participants.yml
+++ b/_data/2021/hse/participants.yml
@@ -38,6 +38,11 @@
   bio: "Nora Kirkizh is a doctoral researcher at GESIS, Department of Computational Social Science and a PhD student at TU Munich, Chair of Computational Social Science and Big Data. Her interests include political behavior, experiments and computational methods. Nora uses digital trace data to study peoples' political attitudes, polarization, and media diets."
   website: norakirkizh.github.io
 
+- name: Hanna Marhunova
+  image: /assets/images/Morgunova.jpg
+  bio: "Hanna Marhunova holds a MA in political science from the Moscow Higher School of Economic and Social Sciences/ University Of Manchester. She is currently pursuing a MA in digital humanities at the HSE University. Her research interests include social and political issues in Belarus and Russia: labor rights, migration, language and discourse."
+  website: 
+
 - name: Timur Naushirvanov
   image: /assets/images/Naushirvanov.png
   bio: "Timur Naushirvanov is a first-year Master of Public Administration student at Central European University in Vienna. His research interests are related to international development and impact evaluation, education, populism, big data, and quantitative research methods. He holds a BA in Political Science from the HSE University, Moscow."
