--- a/_data/2021/hse/participants.yml
+++ b/_data/2021/hse/participants.yml
@@ -32,6 +32,11 @@
   image: /assets/images/Jia.jpg
   bio: "Mengzhen Jia is a master student majoring in sociology in Sun Yat-sen University. Her research interests are centered around field experiments and human-robot interaction (HRI). Currently, she is exploring the emotion mode of social interaction utilizing text mining and video analysis methods. Mengzhen has a background in psychology. She also uses agent-based modeling to better understand the micro-level underpinning of macro-level social interaction patterns such as social conflict and social protest."
   website: https://twitter.com/JiaMandy2021
+  
+- name: Hanna Marhunova
+  image: /assets/images/Marhunova.jpg
+  bio: "Hanna Marhunova holds a MA in political science from the Moscow Higher School of Economic and Social Sciences/ University Of Manchester. She is currently pursuing a MA in digital humanities at the HSE University. Her research interests include social and political issues in Belarus and Russia: labor rights, migration, language and discourse."
+  website: 
 
 - name: Nora Kirkizh
   image: /assets/images/Kirkizh.jpeg
