--- a/_data/2021/rutgers/participants.yml
+++ b/_data/2021/rutgers/participants.yml
@@ -1,3 +1,8 @@
+- name: Laura Bellows
+  image: /assets/images/Laura_Bellows.jpeg
+  bio: "Laura Bellows is a IES postdoctoral fellow in EdPolicyWorks at the University of Virginia; she graduated from Duke with a PhD in Public Policy from Duke University. I am a social policy scholar who studies the persistence of intergenerational inequality by race, ethnicity, and class. In my current research, I focus on describing how U.S. social policies stabilize, or destabilize, children’s lives."
+  website: https://twitter.com/laurabellows
+
 - name: Amy Benner
   image: /assets/images/Amy_Benner.jpeg
   bio: "Amy Benner is a PhD candidate in the Department of Political Science at Rutgers University and a research assistant at the Center for American Women and Politics. Her research interests include women’s political participation, barriers to representation, campaign finance, and political psychology. She primarily examines the fundraising process as a structural barrier for women candidates."
