--- a/_data/2021/montreal/speakers.yml
+++ b/_data/2021/montreal/speakers.yml
@@ -18,4 +18,9 @@
   bio: "Lacourse Éric est professeur titulaire au Département de sociologie à l’Université de Montréal. Il est présentement Responsable du Baccalauréat bidisciplinaire psychologie et sociologie et anciennement directeur du Microprogramme en statistiques sociales. Il s’intéresse dernièrement à l’intégration des approches en apprentissage automatique aux données complexes. Il arbore une perspective multidisciplinaire qui intègre des concepts théoriques provenant de la psychologie développementale et de l'éducation, de la psychiatrie, de la criminologie et de la sociologie. Dans le présent projet, il offrira une expertise méthodologique dans l’analyse des données, ainsi qu’une expertise théorique sur les impacts sociaux du changement en lien avec l’identité et la personnalité."
   website: https://recherche.umontreal.ca/nos-chercheurs/repertoire-des-professeurs/chercheur/is/in14715/
   
+- name:  Peter McMahan
+  image: /assets/images/mcmahan.jpg
+  bio: "Peter McMahan is an Assistant Professor of Sociology at McGill University. He completed his PhD at the University of Chicago. His work centers on the ways that communication and other interaction informs and reinforces knowledge and cultural domains. He specializes in statistical modeling and computational methodologies, with particular focus on network analysis and methods for social inference on large, unstructured datasets."
+  website: https://www.mcgill.ca/sociology/contact-us/faculty/mcmahan
+  
   
