--- a/_data/2021/montreal/speakers.yml
+++ b/_data/2021/montreal/speakers.yml
@@ -4,17 +4,17 @@
   website: http://www.cs.toronto.edu/~ashton/
 
 - name: Golnoosh Farnadi
-  image: /assets/images/golnoosh_farnadi.jpg
+  image: /assets/images/golnoosh_farnadi.jpeg
   bio: "Golnoosh Farnadi is an assistant professor at the decision sciences department at HEC Montréal and a core academic member at Mila (Quebec AI Institute). She develops novel machine learning and AI models to tackle fairness and ethics in AI. Her recent work has mainly focused on addressing bias and algorithmic discrimination in decision making models. Golnoosh completed her PhD in Computer Science at KU Leuven and Ghent University in 2017, and then she became a postdoctoral researcher at the Statistical Relational Learning Group (LINQS) at the University of California, Santa Cruz. In 2021, Golnoosh was appointed a Canada AI CIFAR chair. She has significant collaborative experience with both academia and industry including Microsoft research, UCLA, University of Washington, and Tsinguha University. These successful collaborations are reflected in over 40 publications in international conferences and journals. Among her numerous accomplishments, Golnoosh has received two paper awards for her work on statistical relational learning frameworks."
   website: https://gfarnadi.github.io/
 
 - name: Anatoliy Gruzd
-  image: /assets/images/Anatoliy_Gruzd_profile.jpg
+  image: /assets/images/Anatoliy_Gruzd_profile.jpeg
   bio: "Gruzd Anatoliy is a Canada Research Chair (CRC) in Privacy-Preserving Digital Technologies, an Associate Professor at the Ted Rogers School of Information Technology Management and the Director of Research at the Social Media Lab at Ryerson University. He is also a Member of the Royal Society of Canada’s College of New Scholars, Artists and Scientists, a co-editor of a multidisciplinary journal on Big Data and Society, and a founding co-chair of the International Conference on Social Media and Society. As a computational social scientist, Dr. Gruzd’s research broadly explores how social media platforms are changing the ways in which people and organizations communicate, collaborate, disseminate information and misinformation, conduct business and form communities online, and how these changes impact society. Dr. Gruzd’s expertise lies in studying online communities and social networks, and developing new computational methods and tools to study public discourse on social media sites in a wide variety of domains."
   website: https://www.ryerson.ca/information-technology-management/faculty-research/anatoliy-gruzd/
 
 - name:  Éric Lacourse
-  image: /assets/images/Eric_Larcoux.jpg
+  image: /assets/images/Eric_Larcoux.jpeg
   bio: "Lacourse Éric est professeur titulaire au Département de sociologie à l’Université de Montréal. Il est présentement Responsable du Baccalauréat bidisciplinaire psychologie et sociologie et anciennement directeur du Microprogramme en statistiques sociales. Il s’intéresse dernièrement à l’intégration des approches en apprentissage automatique aux données complexes. Il arbore une perspective multidisciplinaire qui intègre des concepts théoriques provenant de la psychologie développementale et de l'éducation, de la psychiatrie, de la criminologie et de la sociologie. Dans le présent projet, il offrira une expertise méthodologique dans l’analyse des données, ainsi qu’une expertise théorique sur les impacts sociaux du changement en lien avec l’identité et la personnalité."
   website: https://recherche.umontreal.ca/nos-chercheurs/repertoire-des-professeurs/chercheur/is/in14715/
   
