--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -4,49 +4,82 @@
   name:  Welcome Event
   events:
     - name: "Zoom Welcome session and the commencement of the pre-SICSS period."
+      time: "18:00-19:00"
 
 - date: "Pre-SICSS Period: Coding and Reading Tasks"
   events:
     - name: "**[Pre-SICSS Tasks](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/istanbul/pre-SICSS%20tasks.md)**<br/>This 2-week pre-SICSS period will feature a number of essential computational social science readings, along with programming foundation modules to bridge everyone’s diverse skill set. Even if you have excellent programming skills, please go along with us through this period, so that when the actual SICSS begins, you’ll already have a good sense of common problems and skill sets, so that you can get an understanding of who to partner with during the second week of SICSS, where groups will come up with their own research questions and work on it for an entire week."
-    - name: "**Coffee Talks**<br/> While working Pre-SICSS tasks, informal small group coffee talks will be organized to share our experiences, discuss on project ideas, talk about SICSS materials, and chat on participant's questions."
+    - name: "**Code Walkthrough Sessions**<br/> While working Pre-SICSS tasks, coding walkthrough sessions will be held on our tasks. Participants will have a chance to replicate the codes on their desk to improve their coding experience."
 
-- date: 2021-06-01
-  name: Small Group Office Hours and Paper Talks for two weeks
-  events:
-  
-- date: 2021-06-13
-  name: Pre-SICSS Wrap-up session to evaluate the tasks and leisure
-  events:
-  
+- date: 2021-05-31
+  name: Code Walkthrough Sessions
+  events: 
+      - name: "Task 1"
+        time: "20:00-23:00"
+ 
+- date: 2021-06-02
+  name: Code Walkthrough Sessions
+  events: 
+      - name: "Task 2"
+        time: "20:00-23:00"
+
+- date: 2021-06-07
+  name: Code Walkthrough Sessions
+  events: 
+      - name: "Task 3"
+        time: "20:00-23:00"
+        
+- date: 2021-06-09
+  name: Code Walkthrough Sessions
+  events: 
+      - name: "Task 4"
+        time: "20:00-23:00"
+        
+- date: 2021-06-11
+  name: Code Walkthrough Sessions
+  events: 
+      - name: "Task 5"
+        time: "20:00-23:00"
+       
 
 - date: "First Week of ‘Real SICSS’"
   events:
      - name: "**Workshops and Group Discussions**<br/>This week will be full of lectures and small group discussions. We will use the flipped classroom model to follow some of the SICSS curriculum. Additionally, we will organize method workshops with hands-on experience. You will also have speed dating sessions to establish your group for the second week program and you are expected to report your group members and a short description of your group project at the end of the week."
 
 - date: 2021-06-14
-  name: Introduction to curriculum and group discussions on Ethics
+  name: First day of SICSS
   events:
- 
+     - name: Introduction to curriculum and Evaluation the Pre-SICSS Tasks
+       time: "17:00-18:00"
+     - name: Coffee Break
+       time: "18:00-18:30"
+     - name: Group discussions on Ethics
+       time: "18:30-20:00
+       
 - date: 2021-06-15
   name: Automated Methods of Protest Event Collection 
   events:
      - name: "**Tutorial Session by [Erdem Yoruk, Ali Hürriyetoğlu, Fırat Duruşan, Çağrı Yoltar](https://emw.ku.edu.tr/people/)**<br/> Protest event analysis is the most common approach for social movement scholars as it is an unobtrusive and context-sensitive technique that can convert unstructured matter into large volumes of data, in a cross-national, cross-time and cross-issue comparative character. The use of digitized new sources and automated approaches to collect protest events information has accelerated in the 2000s. The selection bias problem, substantial labor costs, and generalizability problems associated with manual coding have constituted the demand conditions for automated methods. What makes automation possible was the big data revolution, which generated vast amounts of news sources digitally available to researchers. Besides, the unprecedented computational power that was built by new generations of processors finally enabled the application of artificial intelligence techniques that had been developed long ago. Henceforth, several very large projects were formed to apply fully or semi-automated methods to collect contentious political event data from news sources, such as GDELT, ICEWS, EMBERS and SPEED, POLCON, and MMAD. In this presentation, we will describe the potentials and challenges of using artificial intelligence to understand social movements and then I will present the new bottom-up methodological approach that has adopted by our European Research Council (ERC) funded project to overcome these challenges."
+       time: "17:00-20:00"
      - name: "**[Readings](https://drive.google.com/drive/folders/1odn_5mzw2oC4Ftw4n3Chqypp0LI5wBId?usp=sharing)**"
- 
+    
 - date: 2021-06-16
   name: Microgeography of Ethnic Enclaves 
   events:
      - name: "**Tutorial Session by [Özge Öner](https://www.landecon.cam.ac.uk/directory/ozge-oner-dr)**<br/> TBA"
-     
+       time: "17:00-20:00"
+       
 - date: 2021-06-17
   name: Characterizing the Nature of Online Political Conversations at Scale 
   events:
       - name: "**Tutorial Session by [Ceren Budak](http://cbudak.com/index.html)**<br/> In this talk, I will summarize two studies on citizen participation in political discussions online. In one, I will focus on the substance of such discussions and show how Twitter users frame immigration discourse. I will report on the issue-generic, issue-specific, and narrative frames we identified using supervised learning techniques and show how users' ideology and region impact framing, and how a message's framing influences its audience responses. In the second part of the talk, I will focus on the style of political conversations. Focusing on Reddit this time, I will show how norms of toxicity in political discussions are sustained and reproduced, shaping how citizens engage online."
-
+        time: "17:00-20:00"
+        
 - date: 2021-06-18
   name: Big Data for Studying Human Migration 
   events:
       - name: "**Tutorial Session by [Tuba Bircan](https://www.tubabircan.com/)**<br/> Traditional statistical data on international migration suffers from the problems (gaps) of inconsistency in definitions, differences in geographical coverage, absence of reasons for migration, timeliness and limitations in demographic characteristics. The global-level migration indicators are relatively under-developed; hence, countries are expected to improve capacity to generate timely, reliable, and comparable data on migration to help guide policy makers in devising evidence-based policies and plans of action to tackle migration aspects of the Social Development Goals. Although there is a novel list of potential data sources that could provide valuable, real-time insights, these remain largely understudied for the time being. To be more specific , the data collected or originated by international institutes and the dissemination of this data faces sensitivity obstacles linked to legal terms, purpose of the data, etc. Likewise, some administrative data collected by national and international organisations (e.g. data on recently arrived migrants, percentage of immigrants who have taken part in integration initiatives, longitudinal studies of integration measures) exists but is not available to many researchers and policy-makers. Finally, new sources of data and Big Data (e.g. mobile phone records, social media data, satellite data, etc.) exist and it could be used to fill some of the gaps of the traditional data. There are commercial and/or privacy issues to solve for having access to that data and substantial research and analysis are required before it can meet policy requirements. Overall improving migration data is a crucial step to improving migration governance since better data is needed in order to bring about sustainable social and economic development and national migrant data strategies are needed to inform good policies. This talk will discuss the existing gaps and shortcomings of the international migration statistics and the potential utilisation of Big Data analytics for bridging these gaps. More specifically, mobile phone data, social media data and earth observation data potentials will be explored with specific examples for developing migration indicators for stock and flows as well as some socio-economic integration. Big Data use for humanitarian aid (related to migration and refugees) and the ethical concerns will also be discussed elaborately."
+        time: "17:00-20:00"
       - name: "**[Readings](https://drive.google.com/file/d/1GABVSOjlSqu1l8HgajbzkArmoUTDsfCW/view?usp=sharing)**"
   
 - date: 2021-06-19
@@ -63,27 +96,31 @@
      - name: "**Group Projects and Alumni Sessions**<br/> This week will be focused on group work projects. Up until this date, you should have an idea of which participants you’d like to team up with and the research question that you’ll work on. Teams that people built in previous SICSS_Istanbul events have flourished into full-fledged research groups, presenting their SICSS papers at APSA, ASA and beyond!"
 
 - date: 2021-06-21
-  name: Short presentation of project proposals
+  name: Artificial Intelligence and Data Analytics Ecosystem in the MENA Region 
   events:
-  
+     - name: "**Industry Talk with [Doğuş Kuran](https://sicss.io/2021/istanbul/people)**<br/>"
+       time: "17:00-20:00"
+       
 - date: 2021-06-22
   name: Natural Language Processing and Applications to Computational Social Science 
   events:
      - name: "**Tutorial Session by [Kemal Oflazer](https://www.andrew.cmu.edu/user/ko/)**<br/> This talk will introduce the participants to basic concepts and techniques of Natural Language Processing in an interactive fashion and will highlight aspect to Turkish that make it a challenge. It will then provide an overview of NLP applications in social sciences."
-
+       time: "17:00-20:00"
+       
 - date: 2021-06-23
-  name: Office Hour and Alumni Session
+  name: Computational Text Analysis with R Walkthrough
   events:
-  
+      time: "20:00-23:00"
 - date: 2021-06-24
-  name: Office Hour and Alumni Session
+  name: Social Media as Spatial Conflict Event Data 
   events:
-  
+      time: "20:00-23:00"
+      
 - date: 2021-06-25
   name: Research presentations from each group and the final day of SICSS
   events:
     - name: "Presentations"
-      time: "14:00 - 16:00"
+      time: "17:00-20:00"
     
     
  
