--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -54,7 +54,7 @@
      - name: Coffee Break
        time: "18:00-18:30"
      - name: Group discussions on Ethics
-       time: "18:30-20:00
+       time: "18:30-20:00"
        
 - date: 2021-06-15
   name: Automated Methods of Protest Event Collection 
