--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -71,7 +71,7 @@
   events:
     - name: "10:00 - 10:15 Logistics (*Zoom*)"
     - name: "10:15 - 10:30 Introduction to the group exercise [Video](https://www.youtube.com/watch?v=ZI95vV7Co38) [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/06-ffchallenge_participate_activity.pdf) (*Zoom*)"
-    - name: "10:30 - 11:30 Participate in the Fraglie Families Challenge [Lesson plan (participants)] (link coming soon) (*Zoom*)"
+    - name: "10:30 - 11:30 Participate in the Fragile Families Challenge [Lesson plan (participants)] (link coming soon) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 1:00 Small group lunches or participant flash talks (encouraged) (*Zoom*)"
     - name: "1:00 - 1:15 Break"
@@ -90,31 +90,31 @@
 - date: 2021-06-21
   name: Work on group projects and participate in SICSS Festival
   events:
-  - name: "9:00 - 4:00 TBD"
+  - name: "10:00 - 4:00 TBD"
   - name: "4:00 - 5:30 Speaker TBD - live session to include Q&A and office hours"
 
 - date: 2021-06-22
   name: Work on group projects and participate in SICSS Festival
   events:
-  - name: "9:00 - 4:00 TBD"
+  - name: "10:00 - 4:00 TBD"
   - name: "4:00 - 5:30 Speaker TBD - live session to include Q&A and office hours"
 
 - date: 2021-06-23
   name: Work on group projects and participate in SICSS Festival
   events:
-  - name: "9:00 - 4:00 TBD"
+  - name: "10:00 - 4:00 TBD"
   - name: "4:00 - 5:30 Speaker TBD - live session to include Q&A and office hours"
 
 - date: 2021-06-24
   name: Work on group projects and participate in SICSS Festival
   events:
-  - name: "9:00 - 4:00 TBD"
+  - name: "10:00 - 4:00 TBD"
   - name: "4:00 - 5:30 Speaker TBD - live session to include Q&A and office hours"
 
 - date: 2021-06-25
   name: Present group projects and participate in SICSS Festival
   events:
-  - name: "9:00 - 12:00 TBD"
+  - name: "10:00 - 12:00 TBD"
   - name: "12:00 - 4:00 Present group projects (*Zoom*)"
   - name: "4:00 - 4:30 Debrief and conclusion"
   - name: "4:30 - 4:45 Break"
