--- a/_data/2021/london/schedule.yml
+++ b/_data/2021/london/schedule.yml
@@ -6,29 +6,29 @@
     - name: "TBD Meet-and-greet (based on this [model](https://medium.com/swlh/how-to-run-a-zoom-cocktail-party-and-have-better-classes-conferences-and-meetings-too-dc2c5b58f8be)) (*Zoom*)"
 
 - date: 2021-06-14
-  name: Introduction and Ethics
+  name: Introduction and Ethics (Faculty Leader: Joshua)
   events:
     - name: "10:00 - 4pm Discussion and Exercises"
     - name: "4pm - 6pm Guest Speaker:  David Lazer"
 
 - date: 2021-06-15
-  name: Collecting Digital Trace Data
+  name: Collecting Digital Trace Data (Faculty Leader: Nicola)
   events:
     - name: "10:00 - 4pm Discussion and Exercises"
     - name: "4pm - 6pm Guest Speaker: Ken Benoit"
 
 - date: 2021-06-16
-  name: Automated Text Analysis
+  name: Automated Text Analysis (Faculty Leader: Mike)
   events:
     - name: "10:00 - 4pm Discussion and Exercises"
 
 - date: 2021-06-17
-  name: Surveys in the Digital Age
+  name: Surveys in the Digital Age (Faculty Leader: Joshua)
   events:
     - name: "10:00 - 4pm Discussion and Exercises"
 
 - date: 2021-06-18
-  name: Computational Models and Virtual Lab Experiments
+  name: Computational Models and Virtual Lab Experiments (Faculty Leaders: Joshua & Milena)
   events:
     - name: "10:00 - 4pm Discussion and Exercises"
 
