--- a/_data/2021/rutgers/schedule.yml
+++ b/_data/2021/rutgers/schedule.yml
@@ -61,14 +61,14 @@
   name: (Morning) Network Analysis Continued
   events:
     - name: "10:00 - 12:00 Network Analysis Exercises"
-    - name: "12:15 - Talk by Matthew Weber"
+    - name: "1:00 - 2:00 Talk by Matthew Weber"
 
 
 - date: 2021-06-21
   name: (Afternoon) Form Research Groups
   events:
-    - name: "1:15 - 3:15 Research Speed Networking"
-    - name: "3:15 - 4:30 Form and Meet with Research Teams"
+    - name: "2:15 - 3:15 Research Speed Networking"
+    - name: "3:15 - 5:30 Form and Meet with Research Teams"
 
 - date: 2021-06-22
   name: Work on group projects
