--- a/_data/2021/rutgers/schedule.yml
+++ b/_data/2021/rutgers/schedule.yml
@@ -61,6 +61,7 @@
   name: (Morning) Network Analysis Continued
   events:
     - name: "10:00 - 12:00 Network Analysis Exercises"
+    - name: "12:00 - 1:00 Small group lunches (optional)"
     - name: "1:00 - 2:00 Talk by Matthew Weber"
 
 
