--- a/_data/2021/rutgers/schedule.yml
+++ b/_data/2021/rutgers/schedule.yml
@@ -19,7 +19,7 @@
     - name: "10:15 - 12:00 Designing a Research Question with Digital Trace Data"
     - name: "12:00 - 1:00 Small group lunches (optional)"
     - name: "1:00 - 3:15 Collecting Digital Trace Data"
-    - name: "3:30 -  Possible Guest Speaker"
+    - name: "3:30 -  Live Tutorial"
 
 - date: 2021-06-16
   name: Automated Text Analysis
@@ -49,7 +49,7 @@
 - date: 2021-06-18
   name: (Afternoon) Network Analysis 
   events:
-    - name: "2:30- 5:00 Network Analysis Tutorials"
+    - name: "2:15- 5:00 Live Network Analysis Tutorial"
 
 - date: 2021-06-19
   name: Day off
