--- a/_data/2021/hse/participants.yml
+++ b/_data/2021/hse/participants.yml
@@ -18,6 +18,11 @@
   bio: "Irina Busurkina is currently pursuing a PhD in sociology at the National Research University Higher School of Economics, Saint Petersburg. She holds both a MA in Sociology from Higher School of Economics University and a MA in Cultural Studies from Saint Petersburg University. Her past research projects were related to the studies of customers’ opinion dynamics and polarizing in Russian media regarding migrants using techniques from natural language processing. Her doctoral thesis focuses on online platforms as institutions for the production of valuation practices."
   website: 
   
+- name: Elizaveta Evmenova
+  image: /assets/images/Evmenova.jpg
+  bio: "Elizaveta Evmenova is a PhD student in applied mathematics at Saint Petersburg State University (SPSU) and works at ITMO University. Her research interests include problem of community detection in graph structures, especially attributed networks. Elizaveta also studies analysis of directed signed graphs and node ranking problem of signed graphs. She is also interested in edge predictability classification problem in ordinary graphs."
+  website: 
+  
 - name: Linna Fu
   image: /assets/images/LinnaFu.PNG
   bio: "Linna Fu is a master student at the Higher School of Economics. She earned one M.Sc. in the Applied Psychology from the Chinese University of Hong Kong (Shenzhen) in 2020. Now her research focuses on the comparative social research about gender inequality and Asian cultural values."
