Add year header for festival; update navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@
 - name: People
   url: "/people"
 - name: Festival
-  url: "/2020/festival"
+  url: "/festival"
 - name: About
   url: "/about"
 - name: Apply
