--- a/_data/2021/istanbul/faculty.yml
+++ b/_data/2021/istanbul/faculty.yml
@@ -5,7 +5,7 @@
 
 - name: Yunus Emre Tapan
   image: /assets/images/YEmreTapan.JPG
-  bio: “Yunus Emre Tapan is a Ph.D. candidate in International Relations at Kadir Has University. He has a Master’s degree in Middle East Studies from Middle Eastern Technical University and a Bachelor’s degree in Economics from Bogazici University. His research sits at the intersection of data science and social sciences. He specializes in social network analysis and computational text analysis to study online extremist communities and non-state actors with a particular focus on how they radicalize. He is a graduate of ICPSR Summer Program in 2020 as one of the recipients of the Scholarship for Political Science Research.”
+  bio: “Yunus Emre Tapan is a Ph.D. Student in Political Science at Northeastern University. He has a Master’s degree in Middle East Studies from Middle Eastern Technical University and a Bachelor’s degree in Economics from Bogazici University. His research sits at the intersection of data science and social sciences. He specializes in social network analysis and computational text analysis to study online extremist communities and non-state actors with a particular focus on how they radicalize. He is a graduate of ICPSR Summer Program in 2020 as one of the recipients of the Scholarship for Political Science Research.”
   website:
 
 - name: Ahmet Kurnaz
