London 2021 - add participant

--- a/_data/2021/london/participants.yml
+++ b/_data/2021/london/participants.yml
@@ -21,6 +21,10 @@
 - name: Damiano Maria Morando
   image: /assets/images/1qxrYNOug-fNzHGjDo2B7gHNs7iN7jm3Z.jpeg
   bio: Damiano Maria Morando is a PhD candidate in Management at Imperial College Business School.  Before joining Imperial College, Damiano did an internship in a venture capital firm in Milan, focused on technology transfer. His Doctoral Thesis focuses on online networking behaviour as a tool for entrepreneurs to facilitate the accrual of early stage financing.
+
+- name: Dominik Schindler
+  image: /assets/images/Schindler_Photo.jpg
+  bio: Dominik Schinder has studied mathematics and digital media in Heidelberg, Berlin and London and is going to start a PhD project in Applied Mathematics at Imperial College London. Drawing from dynamical network analysis and machine learning, Dominik will analyse far-right digital countercultures in collaboration with the Weizenbaum Institute in Berlin.
   
 - name: Jason Burton
   image: /assets/images/1smrVHd7eMNJ8Jcy0h321IQcebYAYcD7R.jpeg
