--- a/_data/2021/hse/schedule.yml
+++ b/_data/2021/hse/schedule.yml
@@ -16,7 +16,7 @@
     - name: "15:45 - 16:45 Small group discussion of [case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf) (*Zoom*)"
     - name: "16:45 - 17:15 Whole group debrief about case study (*Zoom*)"
     - name: "17:15 - 17:30 Break"
-    - name: "17:30 - 18:30 Ivan Smirnov. Errors in quantitative research (*Zoom*)"
+    - name: "17:30 - 18:30 Ivan Smirnov. Common pitfalls in quantitative research (*Zoom*)"
     - name: "19:00 - 19:15 Debrief and logistics (*Zoom*)"
 
 - date: 2021-06-15
