--- a/_data/2021/bologna/schedule.yml
+++ b/_data/2021/bologna/schedule.yml
@@ -57,12 +57,12 @@
     - name: "10:00 - 11:30 Cesar Hidalgo (*Zoom*)"
     - name: "12:30 - 14:30 Brown Bag Seminar: Workshop Individual Projects (*Zoom*)"
     - name: "15:00 - 16:30 Abdullah Almaatouq: In search for Synergy in the Task Space (*Zoom*)"
-    - name: "17:00 - 18:30 Rachael Tatman (*Zoom*)"
+    - name: "17:00 - 18:30 Rachael Tatman: Rules aren't dead: Hybrid ML and rule based systems for practical, trustworthy NLP (*Zoom*)"
 
 - date: 2021-06-30
   name: Invited speakers and workshop on individual projects 
   events:
-    - name: "10:00 - 12:15 Gian Maria Campedelli (*Zoom*)"
+    - name: "10:00 - 12:15 Gian Maria Campedelli:Complex networks, AI and computational methods for terrorism research: applications and challenges (*Zoom*)"
     - name: "12:30 - 14:30 Brown Bag Seminar: Workshop  Individual Projects (*Zoom*)"
     - name: "17:00 - 18:30 Chris Albon (*Zoom*)"
 
